--- a/.gitignore
+++ b/.gitignore
@@ -115,7 +115,6 @@ out
 # Nuxt.js build / generate output
 
 .nuxt
-dist
 
 # Gatsby files
 
@@ -169,4 +168,5 @@ dist
 .pnp.\*
 
 # custom
-bin
+bin/
+package-lock.json
