--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dockerforge",
+  "name": "dockerforged",
   "version": "1.0.0",
   "description": "CLI tool to generate dockerfile definitions and scaffold project templates",
   "author": "Doth-J",
