--- a/npm/package.json
+++ b/npm/package.json
@@ -25,7 +25,7 @@
     "typescript": "^5.4.2"
   },
   "bin": {
-    "dockerforge": "index.js"
+    "dockerforge": "dist/index.min.mjs"
   },
   "engines": {
     "node": ">=18.15.0",
@@ -39,7 +39,6 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "dev": "ts-node index.ts",
     "build": "rimraf dist && tsc && terser dist/index.mjs -c -o dist/index.min.mjs",
     "compile": "rimraf bin && bun build src/index.mts --compile --minify --outfile ./bin/dockeforge",
     "start": "bun dist/index.mjs"
