--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ name: Deploy
 on:
   push:
     branches:
-      - gh-pages 
+      - main
   workflow_dispatch:
-    
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Bun
         uses: DeMoorJasper/setup-bun@v1
         with:
-          bun-version: 'latest'
+          bun-version: "latest"
 
       - name: Install dependencies and build
         run: |
@@ -27,4 +27,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./page/dist  
+          publish_dir: ./page/dist
